--- a/app/sass/_colors.scss
+++ b/app/sass/_colors.scss
@@ -32,3 +32,11 @@ $btn-2-back-hover: #f0a;
 $btn-2-back-active: #000;
 $btn-2-color-active: #f0a;
 /*---------- /btn ---------*/
+
+/*---------- menu ----------*/
+$menu-mobile-color: #fff;
+$menu-mobile-wrap-bg: rgba(14,180,147,.9);
+$menu-btn-color: #282528;
+$menu-btn-color-active: #fff;
+$menu-color: #282528;
+/*---------- /menu ---------*/
