--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,2 +1,14 @@
 @import "main";
 @import "site";
+@import "logo";
+@import "menu";
+@import "btn";
+@import "hero";
+@import "sign";
+@import "what";
+@import "meet";
+@import "logos";
+@import "how";
+@import "testimonials";
+@import "phone";
+@import "contact-us";
