--- a/app/sass/_testimonials.scss
+++ b/app/sass/_testimonials.scss
@@ -22,16 +22,42 @@
     z-index: 1;
 
     .swiper-slide {
-      padding: 0 50px;
+      padding: 50px;
       opacity: .5;
       transition: opacity .3s ease-in-out;
     }
     .swiper-slide-active {
       opacity: 1;
     }
+
+    .swiper-button-next, .swiper-button-prev {
+      width: 18px;
+      height: 31px;
+      margin: 0;
+      background: none;
+      @include absoluteCenterY();
+
+      svg {
+        @include absoluteCenter();
+        width: 36px;
+        height: 33px;
+        fill: rgb(7, 183, 221);
+      }
+    }
+
+    .swiper-button-next {
+      right: 0;
+    }
+
+    .swiper-button-prev {
+      left: 0;
+      transform: translate(0,-50%) matrix(-1,0,0,1,0,0);
+    }
   }
 
   &__author {
+    display: block;
+    margin-bottom: 25px;
     color: rgb(0, 0, 0);
     line-height: 1.126;
     @include futura-bold();
@@ -41,7 +67,7 @@
       overflow: hidden;
       width: 83px;
       height: 83px;
-      margin-bottom: 10px;
+      margin-bottom: 22px;
       border-radius: 50%;
 
       img {
@@ -67,10 +93,18 @@
 }
 @media (min-width: $tablet-landscape) {
   .testimonials {
+    padding: 67px 0 0;
     font-size: 16px;
 
     &__title {
       font-size: 36px;
+    }
+
+    &__slider {
+
+      .swiper-slide {
+        padding: 52px 140px 117px;
+      }
     }
   }
 }
