--- a/app/sass/_btn.scss
+++ b/app/sass/_btn.scss
@@ -5,10 +5,11 @@ a.btn {
   justify-content: center;
   height: 52px;
   min-width: 100px;
-  padding: 10px 20px;
+  padding: 10px 14px;
   background-color: #07b7dd;
   color: #fff;
   font-size: 18px;
+  letter-spacing: 1px;
   border-radius: 3px;
   box-sizing: border-box;
   border: 2px solid #07b7dd;
