--- a/app/sass/_contact-us.scss
+++ b/app/sass/_contact-us.scss
@@ -11,11 +11,14 @@
   }
 
   &__title {
+    margin-bottom: 20px;
     font-size: 20px;
     color: rgb(255, 255, 255);
     text-transform: uppercase;
     line-height: 1;
     @include futura-bold();
+
+    span { display: block }
   }
 
   &__double {
@@ -27,7 +30,7 @@
     input {
       width: 100%;
       height: 40px;
-      padding: 0 10px;
+      padding: 0 15px;
       margin-bottom: 10px;
       border: none;
       border-radius: 6px;
@@ -55,8 +58,10 @@
 }
 @media (min-width: $tablet-landscape) {
   .contact-us {
+    padding: 73px 20px;
 
     &__title {
+      margin-bottom: 34px;
       font-size: 36px;
     }
 
@@ -73,10 +78,15 @@
 
       input {
         height: 65px;
-        padding: 0 20px;
+        padding: 0 27px;
         margin-bottom: 12px;
         font-size: 16px;
       }
+    }
+
+    button[type=submit] {
+      height: 65px;
+      margin-bottom: 17px;
     }
   }
 }
