--- a/app/sass/_meet.scss
+++ b/app/sass/_meet.scss
@@ -2,7 +2,7 @@
   background-color: #f9f8f6;
   font-size: 12px;
   color: rgb(145, 145, 145);
-  line-height: 1.667;
+  line-height: 1.35;
 
   &__content {
     padding: 20px;
@@ -25,7 +25,7 @@
 
     img {
       width: 100px;
-      margin: 0 0 -14px 5px;
+      margin: 0 0 -14px 9px;
     }
   }
 
@@ -78,7 +78,7 @@
   .meet {
     display: flex;
     min-height: 500px;
-    font-size: 20.212px;
+    font-size: 18px;
 
     &__content {
       display: flex;
@@ -107,12 +107,14 @@
     }
 
     ul {
+      padding: 8px 0 0 2px;
+      margin-bottom: -15px;
 
       li {
-        padding: 0 0 20px 30px;
+        padding: 0 0 34px 36px;;
 
         &:before {
-          top: 10px;
+          top: 3px;
           width: 12px;
           height: 12px;
         }
@@ -122,7 +124,15 @@
 }
 @media (min-width: $desktop) {
   .meet {
+    padding: 37px calc(50% - 488px) 0;
 
+    &__content {
+      padding: 31px 100px 69px 14px;
+    }
+
+    &__title {
+      margin-bottom: 27px;
+    }
   }
 }
 
