--- a/app/sass/_phone.scss
+++ b/app/sass/_phone.scss
@@ -30,6 +30,8 @@
 }
 @media (min-width: $tablet-landscape) {
   .phone {
+    padding: 35px 20px 24px;
+
     &__title {
       font-size: 16px;
     }
