--- a/app/sass/_sign.scss
+++ b/app/sass/_sign.scss
@@ -5,7 +5,8 @@
   text-align: center;
   font-size: 12px;
   color: rgb(145, 145, 145);
-  line-height: 1.429;
+  line-height: 1.5;
+  letter-spacing: .3px;
 
   &__title {
     display: block;
@@ -26,13 +27,12 @@
     img {
       display: block;
       width: 150px;
-      margin: 0 auto;
+      margin: 0 auto 10px;
     }
 
     strong {
       display: block;
       padding-top: 10px;
-      text-transform: uppercase;
       font-size: 12px;
       color: rgb(1, 1, 1);
     }
@@ -50,8 +50,8 @@
 }
 @media (min-width: $tablet-landscape) {
   .sign {
-    padding: 40px 20px;
-    font-size: 23.581px;
+    padding: 46px 20px 56px;
+    font-size: 20px;
 
     &__title {
       font-size: 36px;
@@ -64,11 +64,12 @@
     &__signature {
 
       img {
-        width: 250px;
+        width: 175px;
+        margin-bottom: 28px;
       }
 
       strong {
-        font-size: 18px;
+        font-size: 16px;
       }
     }
   }
