check testimonial autor images

--- a/app/sass/_testimonials.scss
+++ b/app/sass/_testimonials.scss
@@ -71,8 +71,10 @@
       border-radius: 50%;
 
       img {
-        @include absoluteCenter();
+        @include absoluteCenterX();
+        top: 0;
         width: 100%;
+        min-height: 100%;
       }
     }
 
