--- a/app/sass/_sign.scss
+++ b/app/sass/_sign.scss
@@ -33,8 +33,21 @@
     strong {
       display: block;
       padding-top: 10px;
+      margin-bottom: 10px;
       font-size: 12px;
       color: rgb(1, 1, 1);
+    }
+
+    a,
+    a:visited {
+      font-size: 12px;
+      color: rgb(145, 145, 145);
+      line-height: 1.5;
+      letter-spacing: .3px;
+      border-bottom: 1px solid transparent;
+      transition: border .3s ease-in-out;
+
+      &:hover { border-bottom-color: rgb(145, 145, 145) }
     }
   }
 }
@@ -71,6 +84,8 @@
       strong {
         font-size: 16px;
       }
+
+      a { font-size: 14px; }
     }
   }
 }
